<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_light"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/white_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="750dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="701dp"
        android:contentDescription="useless bar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:text="@string/task_title"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar" />

    <ImageView
        android:id="@+id/white_bar_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="useless bar"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/min30"
        app:layout_constraintEnd_toEndOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        android:text="@string/later"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font"
        android:textColor="@color/white"
        android:textSize="20dp"/>


    <TextView
        android:id="@+id/min5"
        android:background="@drawable/background1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:text="@string/min5"
        android:textColor="@color/orange_light"
        android:textSize="15dp"
        android:fontFamily="@font/font"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/task_name"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        app:layout_constraintEnd_toStartOf="@id/min10"/>

    <TextView
        android:id="@+id/min10"
        android:background="@drawable/background1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:text="@string/min10"
        android:textColor="@color/orange_light"
        android:textSize="15dp"
        android:fontFamily="@font/font"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/task_name"
        app:layout_constraintStart_toEndOf="@id/min5"
        app:layout_constraintEnd_toStartOf="@id/min15" />

    <TextView
        android:id="@+id/min15"
        android:background="@drawable/background1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:text="@string/min15"
        android:textColor="@color/orange_light"
        android:textSize="15dp"
        android:fontFamily="@font/font"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/task_name"
        app:layout_constraintStart_toEndOf="@id/min10"
        app:layout_constraintEnd_toEndOf="@id/white_bar" />

    <TextView
        android:id="@+id/min30"
        android:background="@drawable/background1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:text="@string/min30"
        android:textColor="@color/orange_light"
        android:textSize="15dp"
        android:fontFamily="@font/font"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/min5"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        app:layout_constraintEnd_toStartOf="@id/min45"/>

    <TextView
        android:id="@+id/min45"
        android:background="@drawable/background1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:text="@string/min45"
        android:textColor="@color/orange_light"
        android:textSize="15dp"
        android:fontFamily="@font/font"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/min5"
        app:layout_constraintStart_toEndOf="@id/min30"
        app:layout_constraintEnd_toStartOf="@id/hr1" />

    <TextView
        android:id="@+id/hr1"
        android:background="@drawable/background1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:text="@string/hr1"
        android:textColor="@color/orange_light"
        android:textSize="15dp"
        android:fontFamily="@font/font"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/min5"
        app:layout_constraintStart_toEndOf="@id/min45"
        app:layout_constraintEnd_toEndOf="@id/white_bar" />


    <ImageView
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/font"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/white_bar_2"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/button_text"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:fontFamily="@font/font"
        android:text="@string/end"
        android:textAlignment="center"
        android:textColor="@color/orange_light"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/button"
        app:layout_constraintEnd_toEndOf="@id/button"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintTop_toTopOf="@id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>