<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<ImageView
        android:id="@+id/white_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="701dp"
        android:contentDescription="useless bar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:text="@string/about_title"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar" />




    <TextView
        android:id="@+id/creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/eng"
        android:text="HOCC@2023"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar"/>


    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:fontFamily="@font/eng"
        android:text="@string/ver"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/creator"
        app:layout_constraintTop_toBottomOf="@id/creator" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:text="@string/pkg"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/version"
        app:layout_constraintStart_toStartOf="@id/version" />

    <TextView
        android:id="@+id/content_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/eng"
        android:text="HOCC.FUN.FORGET"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name" />

    <TextView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/eng"
        android:text="github:"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/content_name"
        app:layout_constraintStart_toStartOf="@id/content_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:fontFamily="@font/eng"
        android:textSize="15dp"
        android:text="https://github.com/HOCC2011/Forget"
        android:textColorLink="@color/light_blue_600"
        app:layout_constraintStart_toStartOf="@id/github"
        app:layout_constraintTop_toBottomOf="@id/github" />

    <ImageView
        android:id="@+id/button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />


</androidx.constraintlayout.widget.ConstraintLayout>


